2019-02-28  Even Rouault  <even.rouault at spatialys.com>

	* contrib/shpgeo.h/.c: Remove PROJ.4 dependency and functionality,
	 causing removal of SHPProject(), SHPSetProjection() and SHPFreeProjection()
	* contrib/shpproj.c: removed

2018-08-16  Even Rouault  <even.rouault at spatialys.com>

	* shpopen.c, dbfopen.c, shptree.c, sbnsearch.c: resyc with GDAL
	internal shapelib. Mostly to allow building those files as C++
	without warning. Also add FTDate entry in DBFFieldType
	(see https://github.com/OSGeo/gdal/pull/308). And some other
	code cleanups

2018-08-16  Even Rouault  <even.rouault at spatialys.com>

	* dbfopen.c: fix a bug where the end of file character was
	written on top of the first character of the first field name
	when deleting a field on a .dbf without records.
	Fixes https://github.com/OSGeo/gdal/issues/863

2018-06-15  Even Rouault  <even.rouault at spatialys.com>

	* safileio.c: remove duplicate test. Patch by Jaroslav Fojtik.
	Fixes http://bugzilla.maptools.org/show_bug.cgi?id=2744

2017-09-14  Even Rouault  <even.rouault at spatialys.com>

	* Shapelib 1.4.1 released

2017-09-10  Even Rouault  <even.rouault at spatialys.com>

	* shpopen.c: resync with GDAL copy. Make sure to zero terminate all
	error messages. And fix regression regarding re-writing the last shape
	of a file (https://trac.osgeo.org/gdal/ticket/7031)

2017-07-10  Even Rouault  <even.rouault at spatialys.com>

	* contrib/shpgeo.c: fix compilation on _MSC_VER < 1800 regarding lack
	of NAN macro.

2016-12-09  Even Rouault  <even.rouault at spatialys.com>

	* Makefile.am: add web/maptools.css to EXTRA_DIST

	* Shapelib 1.4.0 released

2016-12-06  Even Rouault  <even.rouault at spatialys.com>

	* configure.ac: change soname to 2:1:0 to be in sync with Debian soname.
	http://bugzilla.maptools.org/show_bug.cgi?id=2628
	Patch by Bas Couwenberg 

	* contrib/doc/Shape_PointInPoly_README.txt, contrib/shpgeo.c: typo fixes.
	http://bugzilla.maptools.org/show_bug.cgi?id=2629